♻️ reworked connection building